--- a/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
@@ -36,7 +36,7 @@
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td width="600" height="36" align="center" valign="bottom" style="color:#595959;font-family:Helvetica,Arial;font-size:16px;line-height:26px;">
-                                                <strong>{{ name }}</strong> (@{{ screen_name }}) is inviting you to Stamped&#8482;, <br>a new way to recommend only what you like best.
+                                                <strong>{{ name }}</strong> (@{{ screen_name }}) is inviting you to Stamped, <br>a new way to recommend only what you like best.
                                             </td>
                                         </tr>
                                         
