error handling: offline mode for eSearch and eDetail.

--- a/internal/projects/bulleit/Interfaces/CollapsibleViewController.xib
+++ b/internal/projects/bulleit/Interfaces/CollapsibleViewController.xib
@@ -189,6 +189,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 279}, {320, 1}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:180</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -202,8 +203,7 @@
 				<reference key="NSNextKeyView" ref="980426463"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MSAwAA</bytes>
-					<reference key="NSCustomColorSpace" ref="79018839"/>
+					<bytes key="NSWhite">MCAwAA</bytes>
 				</object>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
