--- a/internal/projects/bulleit/Stamped/TOSViewController.xib
+++ b/internal/projects/bulleit/Stamped/TOSViewController.xib
@@ -446,7 +446,7 @@
 						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">gray_back_button_bg@2x.png</string>
+							<string key="NSResourceName">gray_back_button_bg.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="37339986">
 							<string key="name">Helvetica-Bold</string>
@@ -936,7 +936,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="blue_button_background.png">{16, 16}</string>
 			<string key="gradient_background.png">{320, 480}</string>
-			<string key="gray_back_button_bg@2x.png">{138, 60}</string>
+			<string key="gray_back_button_bg.png">{16, 16}</string>
 			<string key="legal_header">{16, 16}</string>
 			<string key="shelf_background.png">{320, 365}</string>
 		</dictionary>
